Fix alignment and sizing issues for login and password inputs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,7 +63,7 @@ body {
     background-color: rgba(100, 103, 108, 0);
     border-width: 0;
     border-bottom: 1px solid black;
-    width: 300px;
+    width: 100%;
     font-size: 13pt;
 }
 
